--- a/index.html
+++ b/index.html
@@ -5,26 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <div class="header-top">
-            <h1>Header Logo</h1>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
-        <div class="header-bottom">
-            <div class="header-text">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the maintitle. 
-                    It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+        <div class="header-info">
+            <div class="header-top">
+                <h1>Header Logo</h1>
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
             </div>
-            <div class="img-placeholder">
-                This is a placeholder for an image
+            <div class="header-bottom">
+                <div class="header-text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the maintitle. 
+                        It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="img-placeholder">
+                    <p>
+                        This is a placeholder for an image
+                    </p>
+                </div>
             </div>
         </div>
     </header>
