--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
     </div>
 
     <div class="quote-section">
-        <p class="quote">
-            This is an ispiring quote, or a testimonial from a customer.
-            Maybe it's  just filling up space, or maybe people will actually
-            read it. Who knows? All I know is that it looks nice.
-        </p>
-        <p class="quoter">Thor, God of Thunder</p>
+        <div class="quote-items">
+            <p class="quote">
+                This is an ispiring quote, or a testimonial from a customer.
+                Maybe it's  just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quoter">-Thor, God of Thunder</p>
+        </div>
     </div>
 
     <div class="sign-up">
